fix generate movement